--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,7 +18,7 @@ AUTHOR WEBSITE: https://themefisher.com
   {{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
   
   <!-- theme meta -->
-  <meta name="theme-name" content="persian-hugo" />
+  <meta name="theme-name" content="Fabfoto" />
   
   {{ hugo.Generator }}
 
